[package]
name = "git-rs"
version = "0.1.0"
edition = "2021"
authors = ["donkomura <koiru3822fs@gmail.com>"]
description = "A toy project to implement Git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
rand = "0.8.5"
